[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongodb-timeseries-generator"
version = "1.0.0"
description = "A high-performance time series data generator for MongoDB Atlas performance testing"
authors = [{name = "MongoDB Atlas Performance Testing Team"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pymongo>=4.6.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "faker>=20.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
tsgen = "main:cli"

[tool.setuptools]
packages = ["timeseries"]

[tool.setuptools.package-dir]
timeseries = "."
